trunk/OldArchive/30e3f3c2fc5b905fb75cf0877c11708e-cc73e281b3b6abc9bf6cf4f153b944a6/output
+ g++ -std=c++11 main.cpp -O3
main.cpp: In function ‘int main()’:
main.cpp:21:43: error: no matching function for call to ‘get_swap()’
   auto swap_func1 = get_swap<std::vector>(); //fails, can't find std::swap<std::vector>
                                           ^
main.cpp:21:43: note: candidate is:
main.cpp:12:19: note: template<class T> void (* get_swap())(T&, T&)
 swap_func_type<T> get_swap()
                   ^
main.cpp:12:19: note:   template argument deduction/substitution failed:
